php-chuid (0.4.1-ppa1) maverick; urgency=low

  * LP #668608
  * Dropped chuid.be_secure ini setting
  * Per-request chroot
  * Improved chroot functionality

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Sat, 30 Oct 2010 06:09:12 +0300

php-chuid (0.3.6-1ppa2) lucid; urgency=low

  * Bump Standards-Version (LP #622759)

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Fri, 23 Aug 2010 17:36:40 +0300

php-chuid (0.3.6-1ppa1) lucid; urgency=low

  * LP #590606;

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Fri, 05 Jun 2010 07:10:35 +0300

php-chuid (0.3.5-1ppa1) lucid; urgency=low

  * LP #588092;
  * LP #588110;
  * LP #589444;
  * code cleanup;

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Fri, 04 Jun 2010 05:21:12 +0300

php-chuid (0.3.5-1~lucid~sj1) lucid; urgency=low

  * LP #588092;
  * LP #588110;
  * LP #589444;
  * code cleanup;

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Fri, 04 Jun 2010 05:21:12 +0300

php-chuid (0.3.4-1~lucid~sj1) lucid; urgency=low

  * Trying http://www.linux.org.ru/jump-message.jsp?msgid=4821721&cid=4822445
    before falling back to seteuid()/setegid();
  * Got rid of suid/sgid parameters to my_set[gu]ids();

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Tue, 27 Apr 2010 18:54:46 +0300

php-chuid (0.3.3-1~karmic~sj1) karmic; urgency=high

  * More secure way to disable functions
    instead of zend_disable_function()

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Sat, 14 Nov 2009 22:37:48 +0200

php-chuid (0.3.1-1~karmic~sj1) karmic; urgency=low

  * Initial release.

 -- Vladimir Kolesnikov <vladimir@extrememember.com>  Wed, 09 Sep 2009 07:10:39 +0300
